--- a/app.html
+++ b/app.html
@@ -264,18 +264,18 @@ body {
         price: "Miễn Phí"
       },
       {
-        name: "Soon",
-        icon: "app.png",
-        link: "#",
-        desc: "Soon",
-        price: "Soon"
+        name: "Youtube Music",
+        icon: "YTM.png",
+        link: "https://koha2002-my.sharepoint.com/:f:/g/personal/koha_koha_io_vn/EtOe2fEzSvFOvG3x78G0tYcBcUcilA7Oj0AKTIT_BDGhUw?e=63cDp7",
+        desc: "YouTube Music hay YouTube Âm nhạc là một dịch vụ nghe nhạc trực tuyến trên ứng dụng của YouTube. Nó cho phép người dùng duyệt qua các bài hát, video âm nhạc YouTube dựa trên sở thích gồm: thể loại, danh sách phát và đề xuất. File đã fix gói chỉ cần chạy! ",
+        price: "Miễn Phí"
       },
       {
-        name: "Soon",
-        icon: "app.png",
-        link: "#",
-        desc: "Soon",
-        price: "Soon"
+        name: "Matlab 2023",
+        icon: "ML.png",
+        link: "https://koha2002-my.sharepoint.com/:f:/g/personal/koha_koha_io_vn/EsKhecESmoVApozMNtZTykgBmkb1SRLX0WQVjk7tYyOiHA?e=Njd4D3",
+        desc: "MATLAB là một công cụ mạnh mẽ được sử dụng rộng rãi trong nhiều lĩnh vực kỹ thuật và khoa học. Với các tính năng vượt trội, MATLAB hỗ trợ người dùng xử lý số liệu, mô phỏng và phát triển thuật toán một cách hiệu quả. File đã bao gồm đầy đủ hướng dẫn và file bẻ.",
+        price: "Miễn Phí"
       },
       {
         name: "Soon",
