--- a/mini-header.html
+++ b/mini-header.html
@@ -3,44 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Header - Tra Cứu Học Thuật Và AI</title>
+    <title>Header - Tự động đổi giao diện Sáng/Tối</title>
     <!-- 
       LƯU Ý:
-      - Header này không còn phụ thuộc vào Tailwind CSS.
-      - Tất cả các style cần thiết đã được định nghĩa trong thẻ <style> dưới đây.
-      - Bạn có thể sao chép và dán khối <header>...</header> này vào bất kỳ đâu trong trang của bạn.
+      - Header này có thể tự động chuyển đổi giữa giao diện Sáng và Tối.
+      - Nó sử dụng CSS media query 'prefers-color-scheme' để phát hiện cài đặt hệ thống của người dùng.
+      - Giao diện mặc định là nền sáng (Light Mode).
     -->
     <style>
-        /* Reset một vài style mặc định để đảm bảo tính nhất quán */
+        /* Định nghĩa các biến màu cho giao diện SÁNG (mặc định) */
+        :root {
+            --header-bg: #ffffff;
+            --header-border: #e5e7eb;
+            --header-text: #111827;
+            --header-hover-bg: #f3f4f6;
+        }
+
+        /* Định nghĩa lại các biến màu cho giao diện TỐI khi người dùng cài đặt */
+        @media (prefers-color-scheme: dark) {
+            :root {
+                --header-bg: #18181b;
+                --header-border: #27272a;
+                --header-text: #e4e4e7;
+                --header-hover-bg: #27272a;
+            }
+        }
+
+        /* Reset một vài style mặc định */
         .ai-header-container button, .ai-header-container img {
-            margin: 0;
-            padding: 0;
-            border: none;
-            background: none;
+            margin: 0; padding: 0; border: none; background: none;
         }
 
         /* Container chính của header */
         .ai-header-container {
-            /* Dính ở trên cùng khi cuộn */
             position: sticky;
             top: 0;
             z-index: 1000;
-
-            /* Bố cục Flexbox */
             display: flex;
             align-items: center;
-            gap: 16px; /* Khoảng cách giữa các phần tử */
-
-            /* Kích thước và màu sắc */
+            gap: 16px;
             width: 100%;
-            height: 64px; /* 4rem */
-            padding: 0 16px; /* Đệm trái/phải */
-            background: linear-gradient(to right, #3b82f6, #4f46e5); /* Nền gradient xanh-tím */
-            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
-            
-            /* Font chữ */
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-            color: white;
+            height: 64px;
+            padding: 0 24px;
+            background-color: var(--header-bg); /* Dùng biến */
+            border-bottom: 1px solid var(--header-border); /* Dùng biến */
+            color: var(--header-text); /* Dùng biến */
+            font-family: system-ui, -apple-system, sans-serif;
+            transition: background-color 0.3s, border-color 0.3s, color 0.3s;
         }
 
         /* Nút logo */
@@ -48,39 +57,35 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            width: 44px;
-            height: 44px;
+            width: 40px;
+            height: 40px;
             border-radius: 50%;
             cursor: pointer;
-            transition: background-color 0.3s, transform 0.3s;
-            padding: 2px;
+            transition: background-color 0.2s;
         }
 
         .ai-header-logo-btn:hover {
-            background-color: rgba(255, 255, 255, 0.2);
-            transform: scale(1.1);
+            background-color: var(--header-hover-bg); /* Dùng biến */
         }
         
         /* Hình ảnh logo */
         .ai-header-logo-img {
             width: 100%;
             height: 100%;
-            /* CẬP NHẬT: Đổi thành 'cover' để ảnh lấp đầy ô chứa, tự động cắt phần thừa */
             object-fit: cover; 
-            /* CẬP NHẬT: Thêm lại border-radius để đảm bảo chính hình ảnh cũng được bo tròn */
             border-radius: 50%;
         }
 
         /* Tiêu đề */
         .ai-header-title {
-            font-size: 1.25rem; /* 20px */
-            font-weight: 700;
-            white-space: nowrap; /* Ngăn không cho xuống dòng */
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+            font-size: 1.125rem;
+            font-weight: 600;
+            color: var(--header-text); /* Dùng biến */
+            transition: color 0.3s;
         }
     </style>
 </head>
-<body style="margin: 0;">
+<body>
 
     <header class="ai-header-container">
         <!-- Nút Trang chủ với Logo -->
@@ -92,7 +97,7 @@
                 src="logo.png" 
                 alt="Logo Trang chủ" 
                 class="ai-header-logo-img"
-                onerror="this.onerror=null;this.src='https://placehold.co/40x40/ffffff/3B82F6?text=Logo';"
+                onerror="this.onerror=null;this.src='https://placehold.co/40x40/27272a/e4e4e7?text=L';"
             >
         </button>
 
