mini-header.html

--- a/mini-header.html
+++ b/mini-header.html
@@ -19,13 +19,13 @@
             --header-hover-bg: #f3f4f6;
         }
 
-        /* Định nghĩa lại các biến màu cho giao diện TỐI khi người dùng cài đặt */
+        /* CẬP NHẬT: Thay đổi màu cho giao diện TỐI để hài hòa hơn */
         @media (prefers-color-scheme: dark) {
             :root {
-                --header-bg: #18181b;
-                --header-border: #27272a;
-                --header-text: #e4e4e7;
-                --header-hover-bg: #27272a;
+                --header-bg: #0f172a; /* Từ đen sang Xanh-xám đậm (Dark Slate Blue) */
+                --header-border: #1e293b; /* Màu viền và hover sáng hơn một chút */
+                --header-text: #e2e8f0; /* Màu chữ trắng ngà */
+                --header-hover-bg: #1e293b;
             }
         }
 
@@ -97,7 +97,7 @@
                 src="logo.png" 
                 alt="Logo Trang chủ" 
                 class="ai-header-logo-img"
-                onerror="this.onerror=null;this.src='https://placehold.co/40x40/27272a/e4e4e7?text=L';"
+                onerror="this.onerror=null;this.src='https://placehold.co/40x40/1e293b/e2e8f0?text=L';"
             >
         </button>
 
